# PokeRpg

./: .gitignore  CMakeLists.txt
script/: map_script.py  perf_test.sh
src/: constants.h  constants.hpp  main.cpp  pokemon.h  pokemon.hpp
src/assets/data/maps/: pokemon1.tsx  world.tmx  world.txt
src/ecs/: Component.h  Component.hpp  ComponentManager.h  ComponentManager.hpp  ECS.cpp  ECS.h  ECS.hpp  EcsController.cpp  EcsController.hpp  EcsManager.cpp  EcsManager.h  Entity.cpp  Entity.h  Entity.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp  SpriteAnimationSystem.cpp  SpriteSystem.cpp  System.h  System.hpp  SystemCharacter.cpp  SystemManager.h  SystemManager.hpp  SystemPlayer.cpp  SystemRandomMovement.cpp  SystemSprite.cpp  SystemSpriteAnimation.cpp  SystemTransform.cpp  SystemTransition.cpp  SystemTrasnform.cpp  TransformSystem.cpp  components.h  components.hpp  player.cpp  player.hpp
src/scene/: FireArenaScene.cpp  HospitalScene.cpp  HouseScene.cpp  LevelScene.cpp  LoadingScreen.cpp  PlantArenaScene.cpp  Scene.h  Scene.hpp  SceneId.h  SceneManager.cpp  TestScene1.cpp  TestScene2.cpp  TitleScreen.cpp  WaterArenaScene.cpp  WorldScene.cpp
src/util/: Action.h  Camera.cpp  Camera.h  Camera.hpp  CharacterId.hpp  Direction.h  FontId.h  FontPool.cpp  FontPool.h  MapId.h  MapId.hpp  ObjectGroupId.hpp  OrderedEntityVector.cpp  OrderedEntityVector.h  PokeType.h  SceneId.h  SceneId.hpp  State.hpp  TexturePool.cpp  TexturePool.h  TexturePool.hpp  TiledMap.cpp  TiledMap.h  TiledMap.hpp  Transition.cpp  Transition.hpp  TransitionType.h  TypeId.h  TypeManager.hpp  mrandom.h  player.h  types.h  types.hpp  util.cpp  util.h  util.hpp
